--- a/packages/@ourworldindata/grapher/package.json
+++ b/packages/@ourworldindata/grapher/package.json
@@ -65,6 +65,7 @@
     "@types/url-parse": "^1.4.8",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "enzyme": "^3.11.0",
+    "esbuild": "^0.18.20",
     "esbuild-sass-plugin": "^2.16.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
