📦 (donate) add missing stripe package

--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
         "simple-git": "^3.16.1",
         "simple-statistics": "^7.3.2",
         "string-pixel-width": "^1.10.0",
+        "stripe": "^14.8.0",
         "striptags": "^3.2.0",
         "svgo": "^3.0.2",
         "timezone-mock": "^1.0.18",
