--- a/packages/@ourworldindata/components/package.json
+++ b/packages/@ourworldindata/components/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@ourworldindata/types": "workspace:^",
         "@ourworldindata/utils": "workspace:^",
         "mobx": "^5.15.7",
         "mobx-formatters": "^1.0.2",
