--- a/packages/@ourworldindata/core-table/package.json
+++ b/packages/@ourworldindata/core-table/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@ourworldindata/types": "workspace:^",
     "@ourworldindata/utils": "workspace:^",
     "d3": "^6.1.1",
     "dayjs": "^1.11.5"
