--- a/packages/@ourworldindata/grapher/package.json
+++ b/packages/@ourworldindata/grapher/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@ourworldindata/components": "workspace:^",
     "@ourworldindata/core-table": "workspace:^",
+    "@ourworldindata/types": "workspace:^",
     "@ourworldindata/utils": "workspace:^",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
