--- a/packages/@ourworldindata/utils/package.json
+++ b/packages/@ourworldindata/utils/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@ourworldindata/types": "workspace:^",
     "@tippyjs/react": "^4.2.6",
     "d3": "^6.1.1",
     "dayjs": "^1.11.5",
